--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/boilerplate.css">
         <link rel="stylesheet" href="css/main.css">
 
         <!--[if lt IE 9]>
