--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
     </head>
     <body>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="container">
+          <header>
+            <div class="logo">Vertigo Coffee</div>
+          </header>
+          <div role="main" class="main">
+            <p>We cool :)</p>
+          </div>
+          <footer>
+            <ul>
+              <li><a href="#">Imprint</a></li>
+            </ul>
+          </footer>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
