--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Vertigo Coffe Roaster - San Juan Bautista</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/boilerplate.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/screen.css">
 
         <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
@@ -22,15 +20,27 @@
 
         <div class="container">
           <header>
-            <div class="logo">Vertigo Coffee</div>
+            <h1 class="logo">Vertigo Coffee</h1>
           </header>
           <div role="main" class="main">
             <p>We cool :)</p>
           </div>
           <footer>
-            <ul>
-              <li><a href="#">Imprint</a></li>
-            </ul>
+            <div id="hcard-Dmitri-Fridman" class="vcard">
+             <a class="url fn" href="http://vertigocoffee.com/">Dmitri Fridman</a>
+             <div class="org">Vertigo Coffee</div>
+             <a class="email" href="mailto:mail@vertigocoffee.com">mail@vertigocoffee.com</a>
+             <div class="adr">
+              <div class="street-address">81 Fourth Street</div>
+              <span class="locality">San Juan Bautista</span>
+            , 
+              <span class="region">CA</span>
+            , 
+              <span class="postal-code">95045</span>
+
+             </div>
+             <div class="tel">831 623-9533</div>
+            </div>
           </footer>
         </div>
 
