--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
 
         <div class="container">
           <header>
-            <h1 class="logo">Vertigo Coffee</h1>
+            <p class="address">81 Fourth Street, San Juan Bautista</p>
+            <p class="hours">Tue–Fri 7–5, Sat/Sun 8–5 </p>
+            <div class="hero">
+              <h1 class="logo">Vertigo Coffee</h1>
+            </div>
           </header>
           <div role="main" class="main">
             <p>We cool :)</p>
           </div>
           <footer>
             <div id="hcard-Dmitri-Fridman" class="vcard">
-             <a class="url fn" href="http://vertigocoffee.com/">Dmitri Fridman</a>
+             <a class="url fn hide" href="http://vertigocoffee.com/">Dmitri Fridman</a>
              <div class="org">Vertigo Coffee</div>
              <a class="email" href="mailto:mail@vertigocoffee.com">mail@vertigocoffee.com</a>
              <div class="adr">
