--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
         <script src="js/main.js"></script>
 
         <script>
-            var _gaq=[['_setAccount','UA-16879309-3'],['_trackPageview']];
+            var _gaq=[
+                ['_setAccount','UA-16879309-3'],
+                ['_trackPageview'],
+                ['_setDomainName', 'vertigocoffee.com']
+             ];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
