--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           <div role="main" class="main">
             <p>We cool :)</p>
           </div>
-          <footer>
+        </div>
+
+        <footer>
+          <div class="container">
             <div id="hcard-Dmitri-Fridman" class="vcard">
              <a class="url fn hide" href="http://vertigocoffee.com/">Dmitri Fridman</a>
              <div class="org">Vertigo Coffee</div>
@@ -45,8 +48,8 @@
              </div>
              <div class="tel">831 623-9533</div>
             </div>
-          </footer>
-        </div>
+          </div>
+        </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
