--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
         <div class="container">
           <header>
-            <p class="address">81 Fourth Street, San Juan Bautista</p>
-            <p class="hours">Tue–Fri 7–5, Sat/Sun 8–5 </p>
+            <div class="top_bar">
+              <p class="address">81 Fourth Street, San Juan Bautista</p>
+              <p class="hours">Tue–Fri 7–5, Sat &amp; Sun 8–5 </p>
+            </div>
             <div class="hero">
               <h1 class="logo">Vertigo Coffee</h1>
             </div>
