--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     </head>
     <body>
 
+    <!-- Facebook SDK -->
+    <div id="fb-root"></div>
+    <script>
+      ;(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=133544936710305";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
         <div class="container">
           <header>
             <div class="top_bar">
@@ -35,7 +47,6 @@
             </section>
             <section>
               <p>We cool :)</p>
-              
             </section>
           </div>
         </div>
@@ -57,6 +68,7 @@
              </div>
              <div class="tel">831 623-9533</div>
             </div>
+            <div class="fb-like" data-href="http://www.facebook.com/vertigocoffee" data-send="false" data-width="225" data-show-faces="true"></div>
           </div>
         </footer>
 
