--- a/index.html
+++ b/index.html
@@ -6,36 +6,66 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Vertigo Coffee Roasters</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
         <div class="container">
           <header>
+            <div class="logo"></div>
           </header>
           <section class="main">
+            <div class="location">
+              <a href="https://www.google.com/maps/place/Vertigo+Coffee,+81+4th+St,+San+Juan+Bautista,+CA+95023"
+                ><div class="icon icon-pin"></div
+                ><div class="vcard text">
+                  <span class="fn">Vertigo Coffee</span>
+                  <span class="adr">
+                    <span class="street-address">81 Fourth Street</span>
+                    <span class="locality">San Juan Bautista</span>,
+                    <abbr class="region" title="California">CA</abbr>
+                    <span class="postal-code">95023</span>
+                  </span>
+                </div>
+              </a>
+            </div>
+            <div class="phone">
+              <a href="tel:+18316239533"
+                 ><div class="icon icon-phone"></div
+                 ><div class="text">(831) 623-9533</div>
+              </a>
+            </div>
+            <ul class="social-links">
+              <li>
+                <a href="https://www.facebook.com/vertigocoffee"
+                  ><div class="icon icon-facebook"></div
+                  ><div class="text">Facebook</div>
+                </a>
+              </li>
+              <li>
+                <a href="https://instagram.com/vertigocoffee"
+                  ><div class="icon icon-instagram"></div
+                  ><div class="text">Instagram</div>
+                </a>
+              </li>
+            </ul>
           </section>
-          <footer>
-          </footer>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
 
-        <script src="js/main.js"></script>
+        <!-- <script src="js/main.js"></script> -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
