Fix zip code and Instagram

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="street-address">81 Fourth Street</span>
                     <span class="locality">San Juan Bautista</span>,
                     <abbr class="region" title="California">CA</abbr>
-                    <span class="postal-code">95023</span>
+                    <span class="postal-code">95045</span>
                   </span>
                 </div>
               </a>
@@ -53,7 +53,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://instagram.com/vertigocoffee"
+                <a href="https://instagram.com/vertigocoffeeroasters"
                   ><div class="icon icon-instagram"></div
                   ><div class="text">Instagram</div>
                 </a>
