Update business name in address

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="https://www.google.com/maps/place/Vertigo+Coffee,+81+4th+St,+San+Juan+Bautista,+CA+95023"
                 ><div class="icon icon-pin"></div
                 ><div class="vcard text">
-                  <span class="fn">Vertigo Coffee</span>
+                  <span class="fn">Vertigo Coffee Roasters</span>
                   <span class="adr">
                     <span class="street-address">81 Fourth Street</span>
                     <span class="locality">San Juan Bautista</span>,
