Add G-Suite verification meta tag
ionno

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Vertigo Coffee Roasters</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-site-verification" content="Wqo6c19YwZhufHxPRT5GvDvpF9UW8jxGQcpnCeDjnt4">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/normalize.min.css">
